[gd_scene load_steps=2 format=3 uid="uid://b8k3m7n2p5qvj"]

[ext_resource type="Script" path="res://scripts/ui/journal_controller.gd" id="1_journal"]

[node name="JournalUI" type="CanvasLayer"]
layer = 8
visible = false
script = ExtResource("1_journal")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="MainPanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -400.0
offset_right = 550.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="JournalTitle" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Grandmother's Journal"

[node name="EntryCounter" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "0 / 12 entries discovered"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "X"

[node name="Separator1" type="HSeparator" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Content" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftSide" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ListTitle" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Content/LeftSide"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Journal Entries"

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/MarginContainer/VBoxContainer/Content/LeftSide"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EntriesVBox" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/Content/LeftSide/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="VSeparator" type="VSeparator" parent="MainPanel/MarginContainer/VBoxContainer/Content"]
layout_mode = 2

[node name="RightSide" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/MarginContainer/VBoxContainer/Content/RightSide"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ContentVBox" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/Content/RightSide/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Content/RightSide/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Select an entry to read"
autowrap_mode = 3

[node name="DateLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Content/RightSide/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = ""
autowrap_mode = 3

[node name="ContentText" type="RichTextLabel" parent="MainPanel/MarginContainer/VBoxContainer/Content/RightSide/ScrollContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Discover journal entries by playing the game. Each entry unlocks when you achieve certain milestones or build relationships with NPCs.

The journal contains your grandmother Elara's notes, observations, and personal reflections on her decades of coastal restoration work. Through her words, you'll learn the science, the struggles, and the love that went into building this legacy.

Press J to open the journal at any time."
fit_content = true
scroll_following = false

[node name="Separator2" type="HSeparator" parent="MainPanel/MarginContainer/VBoxContainer/Content/RightSide/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="UnlockLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Content/RightSide/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = ""
autowrap_mode = 3
